@@ -49,8 +49,6 @@ require "prototypes.buildings.upgrader-mk01"
 require "prototypes.buildings.upgrader-mk02"
 require "prototypes.buildings.upgrader-mk03"
 require "prototypes.buildings.upgrader-mk04"
-require "prototypes.buildings.tanks-10000"
-require "prototypes.buildings.tanks-9000"
 require "prototypes.buildings.cracker-mk01"
 require "prototypes.buildings.cracker-mk02"
 require "prototypes.buildings.cracker-mk03"
