@@ -209,10 +209,6 @@ tholin-atm-mk01=Tholin atmospheric extractor MK 01
 tholin-atm-mk02=Tholin atmospheric extractor MK 02
 tholin-atm-mk03=Tholin atmospheric extractor MK 03
 tholin-atm-mk04=Tholin atmospheric extractor MK 04
-py-tank-9000=PyTank (90 kL)
-py-tank-10000=PyTank (100 kL)
-py-tank-9000-adjust=PyTank (180 kL)
-py-tank-10000-adjust=PyTank (250 kL)
 rhe=Regenerative heat exchanger
 oil-derrick-mk01=Small oil derrick MK 01
 oil-derrick-mk02=Medium oil derrick MK 02
