@@ -165,10 +165,6 @@ tholin-atm-mk01=索林斯大气提取器 MK1
 tholin-atm-mk02=索林斯大气提取器 MK2
 tholin-atm-mk03=索林斯大气提取器 MK3
 tholin-atm-mk04=索林斯大气提取器 MK4
-py-tank-9000=储液罐90k
-py-tank-10000=储液罐100k 
-py-tank-9000-adjust=Py储液罐18k
-py-tank-10000-adjust=Py储液罐25k
 rhe=回热式交换器
 oil-derrick-mk01=小型原油井架
 oil-derrick-mk02=中型原油井架
