@@ -1,6 +1,6 @@
 RECIPE("py-asphalt"):replace_ingredient("tar", "pitch")
 
-RECIPE("reformer-mk02"):add_ingredient {type = "item", name = "py-tank-5000", amount = 2}
+RECIPE("reformer-mk02"):add_ingredient {type = "item", name = "py-tank-65000", amount = 2}
 RECIPE("py-construction-robot-mk01"):add_ingredient {type = "item", name = "belt", amount = 3}
 RECIPE("py-logistic-robot-mk01"):add_ingredient {type = "item", name = "belt", amount = 3}
 RECIPE("mk02-locomotive"):add_ingredient {type = "item", name = "rubber", amount = 40}
